Add JS script for translation
- Add js location in html
- name id's respectively in html

Signed-off-by: ssawrav <s.sawrav@gmail.com>

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <h1>Yoda Translator</h1>
     </header>
     <div class="container">
-        <textarea></textarea>
-        <button>Translate</button>
+        <textarea id="input-txt" placeholder="Enter Your Text here to check the translation: "></textarea>
+        <button id="translate-btn">Translate</button>
         <h3>The translated text will be shown below: </h3>
         <p class="output-box"></p>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
